plugins {
    id 'application'
//    id 'io.github.jwharm.sourceslistplugin' version '0.1'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'io.github.jwharm.javagi:adw:0.7.1'
    testImplementation 'io.github.jwharm.javagi:webkit:0.7.1'
    implementation fileTree(dir: 'lib', include: '*.jar')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

tasks.named('compileJava') {
    options.compilerArgs += "--enable-preview"
}

tasks.named('installDist') {
    destinationDir = file('/app/browser')
}

tasks.named('startScripts') {
    defaultJvmOpts = [
            '--enable-preview',
            '--enable-native-access=ALL-UNNAMED',
            '-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu'
    ]
}

application {
    mainClass = "io.github.jwharm.javagi.examples.browser.Browser"
}

//tasks.sourcesList {
//    outputFile = file('flatpak-sources.json')
//    downloadDirectory = 'lib'
//}
